ChangeLog for PyLint
====================

--
    * #74013: new E1310[bad-str-strip-call] message warning when a call to a
      {l,r,}strip method contains duplicate characters (patch by Torsten Marek)

    * #124660: internal dependencies should not appear in external dependencies
      report

    * #124662: fix name error causing crash when symbols are included in output
      messages

    * Simplify checks for dangerous default values by unifying tests
      for all different mutable compound literals.

2013-02-26 -- 0.27.0

    * #20693: replace pylint.el by Ian Eure version (patch by J.Kotta)

    * #105327: add support for --disable=all option and deprecate the
      'disable-all' inline directive in favour of 'skip-file' (patch by
      A.Fayolle)

    * #110840: add messages I0020 and I0021 for reporting of suppressed
      messages and useless suppression pragmas. (patch by Torsten Marek)

    * #112728: add warning E0604 for non-string objects in __all__
      (patch by Torsten Marek)

    * #120657: add warning W0110/deprecated-lambda when a map/filter
      of a lambda could be a comprehension (patch by Martin Pool)

    * #113231: logging checker now looks at instances of Logger classes
      in addition to the base logging module. (patch by Mike Bryant)

    * #111799: don't warn about octal escape sequence, but warn about \o
      which is not octal in Python (patch by Martin Pool)

    * #110839: bind <F5> to Run button in pylint-gui

    * #115580: fix erroneous W0212 (access to protected member) on super call
      (patch by Martin Pool)

    * #110853: fix a crash when an __init__ method in a base class has been
      created by assignment rather than direct function definition (patch by
      Torsten Marek)

    * #110838: fix pylint-gui crash when include-ids is activated (patch by
      Omega Weapon)

    * #112667: fix emission of reimport warnings for mixed imports and extend
      the testcase (patch by Torsten Marek)
