@@ -1,0 +1,3 @@
+E:  4:foo1: Duplicate argument name _ in function definition
+E:  8:foo2: Duplicate argument name _ in function definition
+E: 12:foo3: Duplicate argument name _ in function definition
